<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="acccess_feature_used">System Accessibility Privileges used in this service are only :</string>
    <string name="acccess_use">"- Accessibility Overlay :
 to place an invisible button around and below the front camera cutout to be functioned as a shortcut for user selected tasks"</string>
    <string name="access">Access</string>
    <string name="accessibilityserviceapi">AccessibilityService API Disclosure</string>
    <string name="actions">Actions</string>
    <string name="activities">Interactive Camera Hole.</string>
    <string name="activities_air">Airplane mode</string>
    <string name="activities_app">Open selected app</string>
    <string name="activities_apps_drawar">Minimized applications drawer</string>
    <string name="activities_bright">Switch screen brightness between low and high values</string>
    <string name="activities_bright_high">High brightness value</string>
    <string name="activities_bright_low">Low brightness value</string>
    <string name="activities_cam">Open camera! make sense?!</string>
    <string name="activities_daynight">Night mode</string>
    <string name="activities_des">Make the camera hole interactive, while there is no notifications or events to be displayed, clicking on camera cutout will:</string>
    <string name="activities_dial">Quick dial</string>
    <string name="activities_dial_num">Dial number</string>
    <string name="activities_dnd">Do Not Disturb</string>
    <string name="activities_double">Double click</string>
    <string name="activities_flash">Toggle camera flashlight</string>
    <string name="activities_how">How to excute the selected function</string>
    <string name="activities_how_long">Long touch</string>
    <string name="activities_how_touch">Touch</string>
    <string name="activities_left">Swipe right to left</string>
    <string name="activities_long">Long touch</string>
    <string name="activities_music">Play/Pause music</string>
    <string name="activities_music_next">Play next music</string>
    <string name="activities_music_prev">Play previous music</string>
    <string name="activities_off">Turn screen Off</string>
    <string name="activities_power">Open the power button menu</string>
    <string name="activities_qr">QR code reader</string>
    <string name="activities_recent">Open recent apps menu</string>
    <string name="activities_right">Swipe left to right</string>
    <string name="activities_ringer">Toggle ringer mode (sound/mute). easily mute the phone before going to sleep and set it back to sound mode when you wake up</string>
    <string name="activities_ringer_vibrate">Toggle ringer mode (sound/vibrate)</string>
    <string name="activities_rotate">Automatic rotation</string>
    <string name="activities_screenshot">Take a screenshot</string>
    <string name="activities_select">select a function</string>
    <string name="activities_single">Single touch</string>
    <string name="activities_sms">Compose new SMS</string>
    <string name="activities_task">Trigger an automated task</string>
    <string name="activities_task_des">"com.notiguy.TASK 
 true/false"</string>
    <string name="activities_task_des_automate">"*Basic Setup:
 Apps -> Broadcast receive ->
 Action Fx = \"com.notiguy.TASK\"
*Advanced Setup:
 the action has two optional variables 1- boolean \"start\" will be true on first touch then false on second touch and so on.
 2- String \"type\"="</string>
    <string name="activities_task_des_macro">"*Basic Setup:
 Device Events -> Intent Received ->
 Action = com.notiguy.TASK 
*Advanced Setup:
 the action has two optional variables \"start\" will be true on first touch then false on second touch and so on.
 Add Extras:
 1- Extra name = start, Extra value = true or false.
 2- Extra name = type, Extra value ="</string>
    <string name="activities_task_des_tasker">"*Basic Setup:
 Events -> System -> Intent Received ->
 Action = com.notiguy.TASK 
*Advanced Setup:
 the action has two optional variables 1- boolean \"start\" will be true on first touch then false on second touch and so on.
 2- String \"type\"="</string>
    <string name="activities_url">Open a website</string>
    <string name="add">Add</string>
    <string name="admin_noty">App needs your permission</string>
    <string name="agree">Agree</string>
    <string name="alert_access">First enable accessibility service permission</string>
    <string name="alert_dynamic">First enable Dynamic Notification after finishing settings</string>
    <string name="alert_notifications">First enable Notification access permission</string>
    <string name="alert_permissions">First grant permissions please</string>
    <string name="alert_test">just for test, not an actual notification.</string>
    <string name="alert_teststart">Testing period started..</string>
    <string name="allowinback">Allow app to work in background</string>
    <string name="allowinback_des">please refer to this website %1$s and see steps with images</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="animate_image">Animate sender image</string>
    <string name="animation">Animation</string>
    <string name="animation_emersion">Emersion</string>
    <string name="animation_smooth">Smooth</string>
    <string name="animation_urgent">Urgent</string>
    <string name="app_name">NotiGuy</string>
    <string name="app_name_status">NotiGuy - Dynamic Notification Helper</string>
    <string name="app_permissions">Required Permissions</string>
    <string name="app_subtitle">NotiGuy - Dynamic Notification</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="apply_lighting_color">Apply Apps colors to :</string>
    <string name="areyousure">Are you sure</string>
    <string name="auto_detect">Auto detect</string>
    <string name="auto_expand">Automatically expand important notifications</string>
    <string name="auto_expand_des">An important notification is the one usually recivied as a pop-up notification</string>
    <string name="auto_full_lock">Starts in fullscreen while screen is Off</string>
    <string name="auto_renewal">Auto renewal</string>
    <string name="automate">Automate</string>
    <string name="back_color">Background Color</string>
    <string name="billshape">make the camera cutout as bill shape</string>
    <string name="blur_onlock">Blur notification content while device is locked.</string>
    <string name="border_color">Border Color</string>
    <string name="bordered_actions">Add borders to notification buttons</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_collapse">Collapse the bottom sheet</string>
    <string name="bottomsheet_action_expand">Expand the bottom sheet</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bottomsheet_drag_handle_clicked">Drag handle double-tapped</string>
    <string name="bottomsheet_drag_handle_content_description">Drag handle</string>
    <string name="cancel">Cancel</string>
    <string name="cat_dynamic">Dynamic notification Island.</string>
    <string name="cat_dynamic_des">Display notification around camera hole or at various places on screen with many modern styles to choose from. it also can be set as notification LED light.</string>
    <string name="cat_indecate">Energy ring.</string>
    <string name="cat_indecate_bar">Energy bar.</string>
    <string name="cat_indecate_des">Use the camera hole as a battery level indicator as a circular line around camera hole it also indicate charging progress.</string>
    <string name="cat_progress">Progress indicator.</string>
    <string name="cat_progress_des">Show the currently processing downloads and uploads as a circular progress line around camera hole.</string>
    <string name="cat_touch_des">Turn the camera hole into a shortcut button! set independent actions for each touch, double click, long click and swiping both sides of the camera.</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="charger">Show for charging</string>
    <string name="charger_des">Display animated icon represent charging and battery level</string>
    <string name="charging">Charging…</string>
    <string name="charging_color">Charging color</string>
    <string name="charging_level">Battery Level:</string>
    <string name="choose">Choose</string>
    <string name="choose_color">Choose color</string>
    <string name="not_now">Not now</string>
    <string name="notch_advanced">use advanced settings</string>
    <string name="notch_advanced_des">if the camera cutout is not a hole</string>
    <string name="notch_height">camera hole Height</string>
    <string name="notch_position">camera hole position</string>
    <string name="notch_position_center">Center</string>
    <string name="notch_position_left">Left</string>
    <string name="notch_position_right">Right</string>
    <string name="notch_side">Space from screen side edge: %1$s</string>
    <string name="notch_top">Space from screen top edge: %1$s</string>
    <string name="notchradius">curving</string>
    <string name="notchtype">camera hole shape</string>
    <string name="notchtype_o">o</string>
    <string name="notchtype_oo">oo</string>
    <string name="notchtype_others">rectangle</string>
    <string name="notchtype_u">U</string>
    <string name="notchtype_vnarrow">V thick</string>
    <string name="notchtype_vwide">V slim</string>
    <string name="ok">OK.</string>
    <string name="policy">Privacy Policy</string>
    <string name="preview">Preview</string>
    <string name="rate">rate</string>
    <string name="share">Share</string>
    <string name="wsize">Width size</string>
</resources>