<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout android:id="@id/container" android:fitsSystemWindows="false" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ScrollView android:orientation="vertical" android:id="@id/scroll_content" android:layout_width="fill_parent" android:layout_height="fill_parent" android:fillViewport="true">
        <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/setting_content" android:paddingTop="50.0dip" android:paddingBottom="50.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <TextView android:textSize="@dimen/main_list" android:textStyle="bold" android:textColor="@color/moveDark" android:gravity="start|center" android:layout_gravity="start|center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/notch_position" android:textAlignment="textStart" android:layout_marginStart="@dimen/padding" android:layout_marginEnd="@dimen/padding" />
            <androidx.cardview.widget.CardView android:layout_gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/vertical_margin" android:layout_marginStart="@dimen/padding" android:layout_marginEnd="@dimen/padding" card_view:cardBackgroundColor="@color/colorPrimaryDark" card_view:cardCornerRadius="@dimen/settings_margin" xmlns:card_view="http://schemas.android.com/apk/res-auto">
                <LinearLayout android:orientation="vertical" android:id="@id/size_notch_settings" android:background="@drawable/border_one_card" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/settings_margin">
                    <TextView android:textSize="@dimen/body_description" android:textStyle="bold" android:textColor="@color/white" android:gravity="start|center" android:id="@id/notch_top" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/settings_margin" android:text="@string/notch_top" android:layout_marginStart="@dimen/settings_margin" />
                    <SeekBar android:id="@id/notchTopSeekBar" android:tag="notchTop" android:layout_width="fill_parent" android:layout_height="wrap_content" android:max="100" android:progress="0" android:layout_marginStart="@dimen/padding" android:layout_marginEnd="@dimen/padding" android:min="0" />
                    <RelativeLayout android:gravity="center_vertical" android:id="@id/notchTopSeekBarAdjust" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="@dimen/padding" android:layout_marginBottom="@dimen/subpadding">
                        <ImageButton android:tag="notchTopSeekBar_A" android:background="@drawable/border_rect_primary_slim_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_add" android:onClick="seekbarAdjust" android:layout_marginStart="12.0dip" android:layout_alignParentStart="true" />
                        <ImageButton android:tag="notchTopSeekBar_M" android:background="@drawable/border_rect_primary_slim_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_remove" android:onClick="seekbarAdjust" android:layout_marginEnd="12.0dip" android:layout_alignParentEnd="true" />
                    </RelativeLayout>
                    <TextView android:textSize="@dimen/body_description" android:textStyle="bold" android:textColor="@color/white" android:gravity="start|center" android:id="@id/notch_position" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/notch_position" />
                    <RadioGroup android:layout_gravity="start" android:padding="@dimen/subpadding" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/settings_margin" android:layout_marginBottom="@dimen/settings_margin" android:layout_marginStart="@dimen/settings_margin">
                        <RadioButton android:textSize="@dimen/main_list" android:textStyle="bold" android:textColor="@color/white" android:gravity="start|center" android:id="@id/notch_position_left" android:tag="notch_position" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/notch_position_left" />
                        <RadioButton android:textSize="@dimen/main_list" android:textStyle="bold" android:textColor="@color/white" android:gravity="start|center" android:id="@id/notch_position_center" android:tag="notch_position" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/settings_margin" android:text="@string/notch_position_center" android:selectAllOnFocus="false" android:textIsSelectable="false" />
                        <RadioButton android:textSize="@dimen/main_list" android:textStyle="bold" android:textColor="@color/white" android:gravity="start|center" android:id="@id/notch_position_right" android:tag="notch_position" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/settings_margin" android:text="@string/notch_position_right" android:selectAllOnFocus="false" android:textIsSelectable="false" />
                    </RadioGroup>
                    <TextView android:textSize="@dimen/body_description" android:textStyle="bold" android:textColor="@color/white" android:gravity="start|center" android:id="@id/notch_side" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/settings_margin" android:text="@string/notch_side" android:layout_marginStart="@dimen/settings_margin" />
                    <SeekBar android:id="@id/notchSideSeekBar" android:tag="notchSide" android:layout_width="fill_parent" android:layout_height="wrap_content" android:max="150" android:progress="0" android:layout_marginStart="@dimen/padding" android:layout_marginEnd="@dimen/padding" android:min="0" />
                    <RelativeLayout android:gravity="center_vertical" android:id="@id/notchSideSeekBarAdjust" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="@dimen/padding" android:layout_marginBottom="@dimen/subpadding">
                        <ImageButton android:tag="notchSideSeekBar_A" android:background="@drawable/border_rect_primary_slim_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_add" android:onClick="seekbarAdjust" android:layout_marginStart="12.0dip" android:layout_alignParentStart="true" />
                        <ImageButton android:tag="notchSideSeekBar_M" android:background="@drawable/border_rect_primary_slim_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_remove" android:onClick="seekbarAdjust" android:layout_marginEnd="12.0dip" android:layout_alignParentEnd="true" />
                    </RelativeLayout>
                    <TextView android:textSize="@dimen/body_description" android:textStyle="bold" android:textColor="@color/white" android:gravity="start|center" android:id="@id/notch_height" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/settings_margin" android:text="@string/notch_height" android:layout_marginStart="@dimen/settings_margin" />
                    <SeekBar android:id="@id/notchHeightSeekBar" android:tag="notchManualHeight" android:layout_width="fill_parent" android:layout_height="wrap_content" android:max="200" android:progress="0" android:layout_marginStart="@dimen/padding" android:layout_marginEnd="@dimen/padding" android:min="0" />
                    <RelativeLayout android:gravity="center_vertical" android:id="@id/notchHeightSeekBarAdjust" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="@dimen/padding" android:layout_marginBottom="@dimen/subpadding">
                        <ImageButton android:tag="notchHeightSeekBar_A" android:background="@drawable/border_rect_primary_slim_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_add" android:onClick="seekbarAdjust" android:layout_marginStart="12.0dip" android:layout_alignParentStart="true" />
                        <ImageButton android:tag="notchHeightSeekBar_M" android:background="@drawable/border_rect_primary_slim_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_remove" android:onClick="seekbarAdjust" android:layout_marginEnd="12.0dip" android:layout_alignParentEnd="true" />
                    </RelativeLayout>
                    <CheckBox android:textSize="@dimen/main_list" android:textStyle="bold" android:textColor="@color/blue" android:gravity="start|center" android:layout_gravity="start|center" android:id="@id/advanced" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/vertical_margin" android:text="@string/notch_advanced" android:drawableEnd="@drawable/ic_arrow_down" android:textAlignment="textStart" android:layout_marginStart="@dimen/padding" android:layout_marginEnd="@dimen/padding" android:drawableTint="@color/blue" />
                    <TextView android:textSize="@dimen/body_description" android:textColor="@color/white" android:gravity="start|center" android:layout_gravity="start|center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/padding" android:text="@string/notch_advanced_des" android:textAlignment="textStart" android:layout_marginStart="@dimen/padding" android:layout_marginEnd="@dimen/padding" />
                    <LinearLayout android:orientation="vertical" android:id="@id/advanced_settings" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/settings_margin">
                        <TextView android:textSize="@dimen/body_description" android:textStyle="bold" android:textColor="@color/secondary_text" android:gravity="start" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/padding" android:text="@string/notchtype" android:selectAllOnFocus="false" android:textIsSelectable="false" android:textAlignment="textStart" android:layout_marginStart="@dimen/settings_margin" android:layout_marginEnd="@dimen/settings_margin" />
                        <RadioGroup android:layout_gravity="start" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginStart="@dimen/supsettings_margin" android:layout_marginEnd="@dimen/supsettings_margin">
                            <RadioButton android:textSize="@dimen/body_description" android:textColor="@color/secondary_text" android:gravity="start|center" android:id="@id/notchtype_others" android:tag="others" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/notchtype_others" android:selectAllOnFocus="false" android:onClick="setNotchType" android:textIsSelectable="false" />
                            <RadioButton android:textSize="@dimen/body_description" android:textColor="@color/secondary_text" android:gravity="start|center" android:id="@id/notchtype_oo" android:tag="oo" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/notchtype_oo" android:selectAllOnFocus="false" android:onClick="setNotchType" android:textIsSelectable="false" />
                            <RadioButton android:textSize="@dimen/body_description" android:textColor="@color/secondary_text" android:gravity="start|center" android:id="@id/notchtype_o" android:tag="o" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/notchtype_o" android:selectAllOnFocus="false" android:onClick="setNotchType" android:textIsSelectable="false" />
                            <RadioButton android:textSize="@dimen/body_description" android:textColor="@color/secondary_text" android:gravity="start|center" android:id="@id/notchtype_u" android:tag="u" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/notchtype_u" android:selectAllOnFocus="false" android:onClick="setNotchType" android:textIsSelectable="false" />
                            <RadioButton android:textSize="@dimen/body_description" android:textColor="@color/secondary_text" android:gravity="start|center" android:id="@id/notchtype_vnarrow" android:tag="vw" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/notchtype_vnarrow" android:selectAllOnFocus="false" android:onClick="setNotchType" android:textIsSelectable="false" />
                            <RadioButton android:textSize="@dimen/body_description" android:textColor="@color/secondary_text" android:gravity="start|center" android:id="@id/notchtype_vwide" android:tag="vn" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/notchtype_vwide" android:selectAllOnFocus="false" android:onClick="setNotchType" android:textIsSelectable="false" />
                        </RadioGroup>
                        <TextView android:textSize="@dimen/body_description" android:textStyle="bold" android:textColor="@color/white" android:gravity="start" android:id="@id/notchradius" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/settings_margin" android:text="@string/notchradius" android:layout_marginStart="@dimen/settings_margin" />
                        <SeekBar android:id="@id/notchRadiusSeekBar" android:tag="notchRadius" android:layout_width="fill_parent" android:layout_height="wrap_content" android:max="100" android:progress="0" android:layout_marginStart="@dimen/padding" android:layout_marginEnd="@dimen/padding" android:min="0" />
                        <RelativeLayout android:gravity="center_vertical" android:id="@id/notchRadiusSeekBarAdjust" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="@dimen/padding" android:layout_marginBottom="@dimen/subpadding">
                            <ImageButton android:tag="notchRadiusSeekBar_A" android:background="@drawable/border_rect_primary_slim_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_add" android:onClick="seekbarAdjust" android:layout_marginStart="12.0dip" android:layout_alignParentStart="true" />
                            <ImageButton android:tag="notchRadiusSeekBar_M" android:background="@drawable/border_rect_primary_slim_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_remove" android:onClick="seekbarAdjust" android:layout_marginEnd="12.0dip" android:layout_alignParentEnd="true" />
                        </RelativeLayout>
                        <TextView android:textSize="@dimen/body_description" android:textStyle="bold" android:textColor="@color/white" android:gravity="start|center" android:id="@id/notch_width" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/settings_margin" android:text="@string/wsize" android:layout_marginStart="@dimen/settings_margin" />
                        <SeekBar android:id="@id/notchWidthSeekBar" android:tag="notchManualWidth" android:layout_width="fill_parent" android:layout_height="wrap_content" android:max="400" android:progress="0" android:layout_marginStart="@dimen/padding" android:layout_marginEnd="@dimen/padding" android:min="0" />
                        <RelativeLayout android:gravity="center_vertical" android:id="@id/notchWidthSeekBarAdjust" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="@dimen/padding" android:layout_marginBottom="@dimen/subpadding">
                            <ImageButton android:tag="notchWidthSeekBar_A" android:background="@drawable/border_rect_primary_slim_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_add" android:onClick="seekbarAdjust" android:layout_marginStart="12.0dip" android:layout_alignParentStart="true" />
                            <ImageButton android:tag="notchWidthSeekBar_M" android:background="@drawable/border_rect_primary_slim_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_remove" android:onClick="seekbarAdjust" android:layout_marginEnd="12.0dip" android:layout_alignParentEnd="true" />
                        </RelativeLayout>
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <Button android:textSize="@dimen/text_button" android:textColor="@color/white" android:layout_gravity="center" android:id="@id/ok" android:background="@drawable/border_one_card_button" android:padding="@dimen/settings_margin" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/vertical_margin" android:text="@string/ok" android:includeFontPadding="false" android:textAllCaps="false" android:layout_marginStart="@dimen/icon_margin" android:layout_marginEnd="@dimen/icon_margin" android:elevation="0.0dip" style="?android:borderlessButtonStyle" />
            <Button android:textSize="@dimen/text_button" android:textColor="@color/primary_text" android:layout_gravity="center" android:id="@id/not_now" android:background="@drawable/border_rect_primary_slim_button" android:padding="@dimen/settings_margin" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/vertical_margin" android:layout_marginBottom="60.0dip" android:text="@string/not_now" android:includeFontPadding="false" android:textAllCaps="false" android:layout_marginStart="@dimen/icon_margin" android:layout_marginEnd="@dimen/icon_margin" android:elevation="0.0dip" style="?android:borderlessButtonStyle" />
        </LinearLayout>
    </ScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>